@@ -19,6 +19,7 @@ acct_mgr-0.4 (not yet released) - branch 0.11
  * #10028: Account delete does not purge user's auth cookie
  * #10123: Registration with EmailVerification should instruct more clearly
  * #10204: Users can delete their email address even when verify_email=true
+ * #10276: "Unknown preference panel" when logging out from account tab
  * do AccountManager class API cleanup by moving db access to model layer
  * prevent duplicate action entries in Trac core permission select box
  * add unit tests i.e. for hash creation and re-written registration checks
